[package]
name = "claude-trace-rs"
version = "0.1.0"
edition = "2021"
description = "Local-first real-time observability for Claude Code sessions"
license = "MIT"

[[bin]]
name = "claude-trace-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
tokio-tungstenite = "0.21"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
