[package]
name = "claude-trace-rs"
version = "0.2.0"
edition = "2021"
description = "Local-first real-time observability dashboard for Claude Code sessions."
license = "MIT"
readme = "README.md"
repository = "https://github.com/CodeHalwell/claude-trace-rs"
homepage = "https://github.com/CodeHalwell/claude-trace-rs"
keywords = ["claude", "observability", "dashboard", "tracing", "cli"]
categories = ["command-line-utilities", "development-tools", "visualization"]
authors = ["CodeHalwell"]
rust-version = "1.74"

[[bin]]
name = "claude-trace-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[profile.release]
# Slim, single binary for `cargo install --path .` distribution.
lto = "thin"
codegen-units = 1
strip = "symbols"
